fix whitespace inconsistencies, cleanup

--- a/frontend/components/forms/fields/AutoSizeInputField/_styles.scss
+++ b/frontend/components/forms/fields/AutoSizeInputField/_styles.scss
@@ -1,7 +1,6 @@
 .component__auto-size-input-field {
   box-sizing: border-box;
   color: $core-fleet-black;
-  width: fit-content;
 
   &::placeholder {
     color: $ui-fleet-black-50;
@@ -22,6 +21,7 @@
     input,
     textarea {
       width: auto;
+      max-width: 100%;
       grid-area: 1 / 2;
       resize: none;
       background: none;
